--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,12 +1,13 @@
 [package]
 name = "elm-parser"
-version = "0.8.0"
+version = "0.1.0"
 edition = "2021"
-license = "MIT OR Apache-2.0"
+license = "MIT"
 documentation = "https://docs.rs/"
 readme = "README.md"
 homepage = "https://littel-bo-peep-leptos-v2.fly.io/"
 repository = "https://github.com/Devland-agancy/little-bo-peep-leptos"
+description = "Elm markup parser to leptos"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 [lib]
