--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "elm-parser"
-version = "1.4.8"
+version = "1.4.9"
 edition = "2021"
 license = "MIT"
 documentation = "https://docs.rs/"
@@ -21,3 +21,5 @@ proc-macro2 = "1.0.69"
 regex = "1.10.0"
 nom = "7.1.3"
 cps = "0.2.3"
+serde_json = "1.0.114"
+serde = "1.0.197"
